# cosmic-toys

./: README.md  justfile
.github/workflows/: release.yml
applet/: Cargo.toml
applet/i18n/en/: cosmic_toys_applet.ftl
applet/resources/: com.pyxyll.CosmicToysApplet.desktop
applet/src/: app.rs  config.rs  main.rs
daemon/: Cargo.toml
daemon/src/: find_mouse.rs  font.rs  history.rs  ipc.rs  main.rs  ocr.rs  overlay.rs  screen_ruler.rs
gui/: Cargo.toml
gui/i18n/en/: cosmic_toys.ftl
gui/resources/: com.pyxyll.CosmicToys.desktop  com.pyxyll.CosmicToys.metainfo.xml
gui/src/: app.rs  autostart.rs  config.rs  ipc.rs  main.rs  shortcut.rs
gui/src/tools/: color_picker.rs  mod.rs  mouse_find.rs  ocr.rs  screen_ruler.rs
