[package]
name = "cosmic-toys-applet"
version = "0.3.0"
edition = "2024"
description = "COSMIC panel applet for cosmic-toys"

[[bin]]
name = "cosmic-toys-applet"
path = "src/main.rs"

[dependencies]
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8.7"
tokio = { version = "1", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic.git"
