[package]
name = "cosmic-toysd"
version = "0.3.0-dev"
edition = "2024"
description = "Headless background daemon for cosmic-toys"

[[bin]]
name = "cosmic-toysd"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
smithay-client-toolkit = "0.19"
tiny-skia = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "sync"] }
wayland-client = "0.31"
