[package]
name = "cosmic-toys"
version = "0.3.0-dev"
edition = "2024"
description = "PowerToys-style toolbox for the COSMIC desktop"
license = "MIT"
homepage = "https://github.com/Pyxyll/cosmic-toys"
repository = "https://github.com/Pyxyll/cosmic-toys"

[[bin]]
name = "cosmic-toys"
path = "src/main.rs"

[dependencies]
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
regex = "1"
rust-embed = "8.7"
tokio = { version = "1", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "about",
    "single-instance",
    "wgpu",
    "xdg-portal",
    "tokio",
    "wayland",
    "winit",
    "dbus-config",
]

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic.git"

# ----- Distribution metadata -----
# Single .deb / .rpm bundles all three workspace binaries (GUI, daemon, applet)
# along with their .desktop entries, the icon, the metainfo, and the systemd
# user unit. cargo-deb / cargo-generate-rpm read these sections from this
# package's Cargo.toml; paths are relative to this file (gui/).

[package.metadata.deb]
name = "cosmic-toys"
maintainer = "pyxyll <pyxyllv@gmail.com>"
copyright = "2026, pyxyll <pyxyllv@gmail.com>"
license-file = ["../LICENSE", "0"]
extended-description = """\
Native Wayland color picker for the COSMIC desktop. Hotkey-triggered \
overlay with a pangocairo zoom loupe; clipboard delivery + notifications; \
GUI window with HEX/RGB/HSL/HSV/OKLCH readouts and history; panel applet."""
section = "graphics"
priority = "optional"
depends = "$auto, grim, wl-clipboard, libnotify-bin, libxkbcommon0, libwayland-client0"
assets = [
    ["../target/release/cosmic-toys",        "usr/bin/",                                       "755"],
    ["../target/release/cosmic-toysd",       "usr/bin/",                                       "755"],
    ["../target/release/cosmic-toys-applet", "usr/bin/",                                       "755"],
    ["resources/com.pyxyll.CosmicToys.desktop",                "usr/share/applications/",       "644"],
    ["../applet/resources/com.pyxyll.CosmicToysApplet.desktop", "usr/share/applications/",      "644"],
    ["resources/com.pyxyll.CosmicToys.svg",                    "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["resources/com.pyxyll.CosmicToys.metainfo.xml",           "usr/share/metainfo/",           "644"],
    ["../dist/systemd/cosmic-toysd.service",                  "usr/lib/systemd/user/",         "644"],
    ["../README.md",                                                  "usr/share/doc/cosmic-toys/README.md", "644"],
]

[package.metadata.generate-rpm]
name = "cosmic-toys"
license = "MIT"
summary = "Native Wayland color picker for the COSMIC desktop"
requires = { grim = "*", "wl-clipboard" = "*", libnotify = "*", libxkbcommon = "*" }
assets = [
    { source = "../target/release/cosmic-toys",        dest = "/usr/bin/cosmic-toys",        mode = "755" },
    { source = "../target/release/cosmic-toysd",       dest = "/usr/bin/cosmic-toysd",       mode = "755" },
    { source = "../target/release/cosmic-toys-applet", dest = "/usr/bin/cosmic-toys-applet", mode = "755" },
    { source = "resources/com.pyxyll.CosmicToys.desktop",                 dest = "/usr/share/applications/com.pyxyll.CosmicToys.desktop",        mode = "644" },
    { source = "../applet/resources/com.pyxyll.CosmicToysApplet.desktop", dest = "/usr/share/applications/com.pyxyll.CosmicToysApplet.desktop", mode = "644" },
    { source = "resources/com.pyxyll.CosmicToys.svg",                     dest = "/usr/share/icons/hicolor/scalable/apps/com.pyxyll.CosmicToys.svg", mode = "644" },
    { source = "resources/com.pyxyll.CosmicToys.metainfo.xml",            dest = "/usr/share/metainfo/com.pyxyll.CosmicToys.metainfo.xml",        mode = "644" },
    { source = "../dist/systemd/cosmic-toysd.service",                   dest = "/usr/lib/systemd/user/cosmic-toysd.service",                  mode = "644" },
    { source = "../README.md",                                                   dest = "/usr/share/doc/cosmic-toys/README.md",                        mode = "644" },
]
